--- a/src/main/resources/templates/administradores/administradores.html
+++ b/src/main/resources/templates/administradores/administradores.html
@@ -77,7 +77,7 @@
                     <a th:href="@{/personal}" class="btn btn-lg btn-secondary w-100 py-4">Personal</a>
                 </div>
                 <div class="col-md-6">
-                    <button class="btn btn-lg btn-secondary w-100 py-4">Clientes</button>
+                    <a th:href="@{/clientes}" class="btn btn-lg btn-secondary w-100 py-4">Clientes</a>
                 </div>
                 <div class="col-md-6">
                     <button class="btn btn-lg btn-secondary w-100 py-4">Empresas</button>
