--- a/src/main/resources/templates/clientes/clientes.html
+++ b/src/main/resources/templates/clientes/clientes.html
@@ -1,76 +1,96 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Lista de Usuarios</title>
+    <title>Clientes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
+    <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
 
-<div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
-
-<div class="container mt-4">
-    <!--Menú Vertical-->
-    <div class="row mb-4 align-items-center">
-        <div class="col-md-3 text-center">
-            <!--<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
+    <div class="container mt-4">
+        <!-- Menú Vertical -->
+        <div class="row mb-4 align-items-center">
+            <div class="col-md-3 text-center">
+                <!--<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/DuaLipaLogo2020.png" alt="Logo de la Empresa"
                  class="img-fluid mb-1" width="200" height="200">-->
-        </div>
-        <div class="col-md-9 d-flex justify-content-between align-items-center">
-            <h1 class="mb-0">Usuarios</h1>
-            <a th:href="@{/personal/usuarios/crear}" class="btn btn-outline-secondary ms-auto">Nuevo Usuario</a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-3">
-            <div th:insert="~{personal/navbar_vertical_personal :: navbar_vertical}"></div>
+            </div>
+            <div class="col-md-9 d-flex justify-content-between align-items-center">
+                <h1 class="mb-0">Clientes</h1>
+                <a th:href="@{/clientes/clientes/crear}" class="btn btn-outline-secondary ms-auto">Nuevo Cliente</a>
+            </div>
         </div>
 
-        <div class="col">
-            <form class="d-flex mb-3" role="search">
-                <input class="form-control me-2" type="search" placeholder="Buscar por Nombre"
-                       aria-label="Buscar">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
+        <div class="row">
+            <div class="col-md-3 mb-3 mb-md-0">
+                <div th:insert="~{personal/navbar_vertical_personal :: navbar_vertical}"></div>
+            </div>
 
-            <div class="table-responsive">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Usuario</th>
-                        <th>Empresa</th>
-                        <th>Rol</th>
-                        <th>Acciones</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="usuario : ${usuarios}">
-                        <td th:text="${usuario.id_usuario}">ID</td>
-                        <td th:text="${usuario.nombre}">Nombre</td>
-                        <td th:text="${usuario.apellido}">Apellido</td>
-                        <td th:text="${usuario.usuario}">Usuario</td>
-                        <td th:text="${usuario.empresa.razon_social}">Empresa</td>
-                        <td th:text="${usuario.rol.rol}">Rol</td>
-                        <td>
-                            <a th:href="@{/personal/usuarios/editar/{id}(id=${usuario.id_usuario})}"
-                               class="btn btn-info btn-sm">Editar</a>
-                            <a th:href="@{/personal/usuarios/{id}(id=${usuario.id_usuario})}"
-                               class="btn btn-danger btn-sm">Eliminar</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="col-md-9">
+                <div id="errorMessage" th:if="${session.errorMessage}" th:text="${session.errorMessage}"
+                    class="alert alert-danger"></div>
+                <div id="successMessage" th:if="${session.successMessage}" th:text="${session.successMessage}"
+                    class="alert alert-success"></div>
+
+                <form class="d-flex mb-3" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar por Nombre" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover align-middle">
+                        <thead>
+                            <tr>
+                                <th scope="col">Cédula</th>
+                                <th scope="col">Nombres</th>
+                                <th scope="col">Correo</th>
+                                <th scope="col">Dirección</th>
+                                <th scope="col">Teléfono</th>
+                                <th scope="col">Tipo de Cliente</th>
+                                <th scope="col">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="cliente : ${clientes}">
+                                <td th:text="${cliente.cedula}">[Cédula]</td>
+                                <td th:text="${cliente.nombre} + ' ' + ${cliente.apellido}">[Nombre Apellido]</td>
+                                <td th:text="${cliente.correo}">[Correo]</td>
+                                <td th:text="${cliente.direccion}">[Dirección]</td>
+                                <td th:text="${cliente.telefono}">[Teléfono]</td>
+                                <td th:text="${cliente.tipo_cliente.tipo}">[Tipo]</td>
+                                <td>
+                                    <a th:href="@{/clientes/clientes/editar/{id}(id=${cliente.id_cliente})}"
+                                        class="btn btn-info btn-sm">Editar</a>
+
+                                    <a th:href="@{/clientes/clientes/{id}(id=${cliente.id_cliente})}"
+                                        class="btn btn-danger btn-sm">Eliminar</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Y5LmZ5nI/3I5qU9M61GbiFmOsjs6" crossorigin="anonymous">
+        </script>
+
+    <script>
+        // Ocultar mensajes de error y éxito
+        $(document).ready(function () {
+            setTimeout(function () {
+                $('#errorMessage').fadeOut('slow');
+                $('#successMessage').fadeOut('slow');
+            }, 3000); // 3 segundos
+        });
+    </script>
 </body>
+
 </html>
