--- a/src/main/resources/templates/clientes/editar_cliente.html
+++ b/src/main/resources/templates/clientes/editar_cliente.html
@@ -1,101 +1,138 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Crear Usuario</title>
+    <title>Editar Cliente Usuario</title>
 
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <style>
+        /* Ocultar las flechas de incremento y decremento en el input numérico */
+        input[type=number]::-webkit-outer-spin-button,
+        input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
 
-<div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
+    <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
 
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h2 class="mb-4 text-center">Añadir Nuevo Usuario</h2>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h2 class="mb-4 text-center">Editar Clienteo</h2>
 
-            <form th:action="@{/personal/usuarios}" th:object="${usuarioNuevo}"
-                  method="post" class="needs-validation" novalidate>
+                <form th:action="@{/clientes/clientes/{id}(id=${cliente.id_cliente})}" th:object="${cliente}"
+                    method="post" class="needs-validation" novalidate>
 
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" th:field="*{nombre}"
-                           placeholder="Escriba el Nombre"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese el nombre.
+                    <div class="mb-3">
+                        <label for="cedula" class="form-label">Cédula:</label>
+                        <input type="number" id="cedula" name="cedula" th:field="*{cedula}"
+                            placeholder="Escriba la Cédula" class="form-control" disabled>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese la cédula.
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="apellido" class="form-label">Apellido:</label>
-                    <input type="text" id="apellido" name="apellido" th:field="*{apellido}"
-                           placeholder="Escriba su Apellido"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese un apellido.
+
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="nombre" class="form-label">Nombre:</label>
+                            <input type="text" id="nombre" name="nombre" th:field="*{nombre}"
+                                placeholder="Escriba el Nombre" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese el nombre.
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="apellido" class="form-label">Apellido:</label>
+                            <input type="text" id="apellido" name="apellido" th:field="*{apellido}"
+                                placeholder="Escriba su Apellido" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese un apellido.
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="usuario" class="form-label">Usuario:</label>
-                    <input type="text" id="usuario" name="usuario" th:field="*{usuario}"
-                           placeholder="Escriba su Usuario"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese un usuario.
+                    <div class="mb-3">
+                        <label for="correo" class="form-label">Correo:</label>
+                        <div class="input-group has-validation">
+                            <span class="input-group-text">@</span>
+                            <input type="email" id="correo" name="correo" th:field="*{correo}"
+                                placeholder="Escriba su Correo" class="form-control" required>
+                        </div>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese un correo válido.
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="contrasena" class="form-label">Contraseña:</label>
-                    <input type="password" id="contrasena" th:field="*{contrasena}" name="contrasena"
-                           placeholder="Escriba su Contraseña"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese la contraseña.
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="telefono" class="form-label">Teléfono:</label>
+                            <input type="number" id="telefono" name="telefono" th:field="*{telefono}"
+                                placeholder="Escriba su Teléfono" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese un teléfono válido.
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="direccion" class="form-label">Direccion:</label>
+                            <input type="text" id="direccion" name="direccion" th:field="*{direccion}"
+                                placeholder="Escriba su Direccion" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese una direccion.
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="empresa" class="form-label">Empresa:</label>
-                    <select id="empresa" name="empresa.id_empresa" class="form-select" required>
-                        <option value="" selected>Selecciona una Empresa</option>
-                        <option th:each="empresa : ${empresas}" th:value="${empresa.id_empresa}"
+                    <div class="mb-3">
+                        <label for="empresa" class="form-label">Empresa:</label>
+                        <select id="empresa" name="empresa.id_empresa" class="form-select" required>
+                            <option value="" selected>Selecciona una Empresa</option>
+                            <option th:each="empresa : ${empresas}" th:value="${empresa.id_empresa}"
+                                th:selected="${empresa.id_empresa} == ${cliente.empresa.id_empresa}"
                                 th:text="${empresa.razon_social}"></option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Por favor, seleccione una empresa.
+                        </select>
+                        <div class="invalid-feedback">
+                            Por favor, seleccione una empresa.
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="rol" class="form-label">Rol:</label>
-                    <select id="rol" name="rol.id_rol" class="form-select" required>
-                        <option value="" selected>Selecciona un Rol</option>
-                        <option th:each="rol : ${roles}" th:value="${rol.id_rol}" th:text="${rol.rol}"></option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Por favor, seleccione un rol.
+                    <div class="mb-3">
+                        <label for="tipo_cliente" class="form-label">Tipo Cliente:</label>
+                        <select id="tipo_cliente" name="tipo_cliente.id_tipo_cliente" class="form-select" required>
+                            <option value="" selected>Selecciona un Tipo de Cliente</option>
+                            <option th:each="tipo_cliente : ${tipos_cliente}" th:value="${tipo_cliente.id_tipo_cliente}"
+                                th:selected="${tipo_cliente.id_tipo_cliente} == ${cliente.tipo_cliente.id_tipo_cliente}"
+                                th:text="${tipo_cliente.tipo}"></option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Por favor, seleccione un tipo de cliente.
+                        </div>
                     </div>
-                </div>
 
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
+
+                </form>
+                <div class="mt-3 text-center">
+                    <a th:href="@{/clientes/clientes}" class="btn btn-secondary">Volver a la lista de usuarios</a>
                 </div>
-            </form>
-            <div class="mt-3 text-center">
-                <a th:href="@{/personal/usuarios}" class="btn btn-secondary">Volver a la lista de usuarios</a>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 <script>
@@ -119,6 +156,37 @@
                 }, false)
             })
     })()
+
+    // Validación adicional de correo electrónico con JavaScript
+    document.getElementById('correo').addEventListener('input', function (event) {
+        var email = event.target.value;
+        var pattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+        if (!pattern.test(email)) {
+            event.target.setCustomValidity('Por favor, ingrese un correo válido.');
+        } else {
+            event.target.setCustomValidity('');
+        }
+    });
+
+    // Validación de teléfono celular ecuatoriano
+    document.getElementById('telefono').addEventListener('input', function (event) {
+        var telefono = event.target.value;
+        if (!validarTelefonoEcuador(telefono)) {
+            event.target.setCustomValidity('Teléfono no válido.');
+        } else {
+            event.target.setCustomValidity('');
+        }
+    });
+
+    function validarTelefonoEcuador(telefono) {
+        var pattern = /^09[0-9]{8}$/;
+        return pattern.test(telefono);
+    }
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
 
 </html>
