--- a/src/main/resources/templates/clientes/tipos_cliente.html
+++ b/src/main/resources/templates/clientes/tipos_cliente.html
@@ -72,20 +72,18 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
-        // Ocultar mensajes de error y éxito después de 3 segundos
         $(document).ready(function () {
+            // Ocultar mensajes de error y éxito después de 3 segundos
             setTimeout(function () {
                 $('#errorMessage').fadeOut('slow');
                 $('#successMessage').fadeOut('slow');
             }, 3000); // 3 segundos
         });
     </script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Y5LmZ5nI/3I5qU9M61GbiFmOsjs6" crossorigin="anonymous">
-        </script>
 </body>
 
 </html>
