--- a/src/main/resources/templates/inventario/editar_producto.html
+++ b/src/main/resources/templates/inventario/editar_producto.html
@@ -1,109 +1,133 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Editar Producto</title>
 
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <style>
+        /* Ocultar las flechas de incremento y decremento en el input numérico */
+        input[type=number]::-webkit-outer-spin-button,
+        input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
 
-<div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
+    <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
 
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h2 class="mb-4 text-center">Editar Producto</h2>
 
-<div class="container-fluid mt-4">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h2 class="mb-4 text-center">Editar Producto</h2>
+                <form th:action="@{/inventario/productos/{id}(id=${producto.id_producto})}" th:object="${producto}"
+                    enctype="multipart/form-data" class="needs-validation" method="post" novalidate>
 
-            <div th:if="${message}" class="alert alert-info" role="alert">
-                <p th:text="${message}"></p>
-            </div>
-
-            <form th:action="@{/inventario/productos/{id}(id=${producto.id_producto})}" th:object="${producto}"
-                  enctype="multipart/form-data" class="needs-validation" method="post" novalidate>
-
-                <div class="mb-3">
-                    <label for="producto" class="form-label">Nombre del Producto:</label>
-                    <input type="text" id="producto" name="producto" th:field="*{producto}"
-                           placeholder="Escriba el Nombre del Producto"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese el nombre del producto.
+                    <div class="mb-3">
+                        <label for="producto" class="form-label">Nombre del Producto:</label>
+                        <input type="text" id="producto" name="producto" th:field="*{producto}"
+                            placeholder="Escriba el Nombre del Producto" class="form-control" required>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese el nombre del producto.
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="descripcion" class="form-label">Descripción:</label>
-                    <textarea type="text" id="descripcion" name="descripcion" th:field="*{descripcion}"
-                              placeholder="Escriba la Descripcion"
-                              class="form-control" rows="3" required></textarea>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese la descripcion.
+                    <div class="mb-3">
+                        <label for="descripcion" class="form-label">Descripción:</label>
+                        <textarea type="text" id="descripcion" name="descripcion" th:field="*{descripcion}"
+                            placeholder="Escriba la Descripcion" class="form-control" rows="3" required></textarea>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese la descripcion.
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="categoria" class="form-label">Categoria:</label>
-                    <select id="categoria" name="categoria.id_categoria" class="form-select" required>
-                        <option value="" selected>Selecciona una Categoría</option>
-                        <option th:each="categoria : ${categorias}" th:value="${categoria.id_categoria}"
+                    <div class="mb-3">
+                        <label for="categoria" class="form-label">Categoria:</label>
+                        <select id="categoria" name="categoria.id_categoria" class="form-select" required>
+                            <option value="" selected>Selecciona una Categoría</option>
+                            <option th:each="categoria : ${categorias}" th:value="${categoria.id_categoria}"
                                 th:selected="${categoria.id_categoria} == ${producto.categoria.id_categoria}"
                                 th:text="${categoria.categoria}"></option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Por favor, una categoría
+                        </select>
+                        <div class="invalid-feedback">
+                            Por favor, una categoría
+                        </div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-
-                    <label class="form-label">Icono actual:</label>
-                    <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
-                         class="img-fluid" style="width: 100px; height: 100px;"><br>
+                    <div class="mb-3">
+                        <label class="form-label">Icono actual:</label>
+                        <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
+                            class="img-fluid" style="width: 100px; height: 100px;"><br>
 
 
-                    <label class="form-label">Icono:</label>
-                    <input type="file" id="icono" name="icono" th:field="*{icono}"
-                           class="form-control"
-                           aria-label="file example" required>
-                    <div class="invalid-feedback">Example invalid form file feedback</div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="precio" class="form-label">Precio:</label>
-                    <input type="number" step="0.01" id="precio" name="precio" th:field="*{precio}"
-                           placeholder="Escriba el Precio"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese el nombre.
+                        <label class="form-label">Icono:</label>
+                        <input type="file" id="icono" name="icono" th:field="*{icono}" class="form-control"
+                            aria-label="file example" required>
+                        <div class="invalid-feedback">Example invalid form file feedback</div>
                     </div>
-                </div>
 
-                <div class="mb-3">
-                    <label for="cantidad" class="form-label">Cantidad:</label>
-                    <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}"
-                           placeholder="Escriba la Cantidad"
-                           class="form-control" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese el nombre.
+                    <div class="mb-3">
+                        <label for="precio" class="form-label">Precio:</label>
+                        <input type="number" step="0.01" id="precio" name="precio" th:field="*{precio}"
+                            placeholder="Escriba el Precio" class="form-control" required>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese el nombre.
+                        </div>
                     </div>
-                </div>
 
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <div class="mb-3">
+                        <label for="cantidad" class="form-label">Cantidad:</label>
+                        <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}"
+                            placeholder="Escriba la Cantidad" class="form-control" required>
+                        <div class="invalid-feedback">
+                            Por favor, ingrese el nombre.
+                        </div>
+                    </div>
+
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
+                </form>
+                <div class="mt-3 text-center">
+                    <a th:href="@{/inventario/productos}" class="btn btn-secondary">Volver a Productos</a>
                 </div>
-            </form>
-            <div class="mt-3 text-center">
-                <a th:href="@{/inventario/productos}" class="btn btn-secondary">Volver a Productos</a>
             </div>
         </div>
     </div>
-</div>
 </body>
+
+<script>
+    // Ejemplo de JavaScript para validación de formularios
+    (function () {
+        'use strict'
+
+        // Obtener todos los formularios a los que queremos aplicar estilos de validación de Bootstrap personalizados
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Bucle sobre ellos y evitar el envío
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
+
 </html>
