--- a/src/main/resources/templates/inventario/navbar_vertical_inventario.html
+++ b/src/main/resources/templates/inventario/navbar_vertical_inventario.html
@@ -18,7 +18,7 @@
     <nav class="nav flex-column bg-light">
         <a class="nav-link active" aria-current="page" th:href="@{/inventario/productos}">Productos</a>
         <a class="nav-link" th:href="@{/inventario/categorias}">Categorías</a>
-        <a class="nav-link" th:href="@{/inventario/iva}">Impuesto Valor Agregado (IVA)</a>
+        <a class="nav-link" th:href="@{/inventario/ivas}">Impuesto Valor Agregado (IVA)</a>
     </nav>
 </div>
 </body>
