--- a/src/main/resources/templates/inventario/productos.html
+++ b/src/main/resources/templates/inventario/productos.html
@@ -24,7 +24,7 @@
                  class="img-fluid mb-1" width="200" height="200">-->
             </div>
             <div class="col-md-9 d-flex justify-content-between align-items-center">
-                <h1 class="mb-0">Lista de Productos</h1>
+                <h1 class="mb-0">Productos</h1>
                 <a th:href="@{/inventario/productos/crear}" class="btn btn-outline-secondary ms-auto">Añadir
                     Producto</a>
             </div>
