--- a/src/main/resources/templates/facturacion/facturas.html
+++ b/src/main/resources/templates/facturacion/facturas.html
@@ -15,7 +15,13 @@
 
 <body>
 
-    <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
+    <!-- Barra de navegación respecto al rol del usuario -->
+    <div th:if="${usuario.rol.id_rol == 1}">
+        <div th:insert="~{administradores/navbar_administradores :: navbar}"></div>
+    </div>
+    <div th:if="${usuario.rol.id_rol == 2}">
+        <div th:insert="~{cajeros/navbar_cajeros :: navbar}"></div>
+    </div>
 
     <div class="container mt-4">
         <div class="row mb-4 align-items-center">
@@ -32,7 +38,7 @@
                     aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
-            
+
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div th:each="factura : ${facturas}" class="col">
                     <div class="card h-100">
@@ -42,20 +48,22 @@
                                     <h5 class="card-title mb-1">Factura</h5>
                                 </div>
                                 <h5 class="card-title mb-1" th:text="${factura.numero_factura}">[#Factura]</h5>
-
                             </div>
                             <p class="card-text mt-2">
-                                <strong>Cliente:</strong> <br> <span
+                                <strong>Cliente:</strong> <br>
+                                <span
                                     th:text="${factura.cliente.nombre} + ' ' + ${factura.cliente.apellido}">[Cliente]</span><br>
-                                <strong>Fecha de Emisión:</strong> <br> <span
-                                    th:text="${factura.fecha}">[Fecha]</span><br>
+                                <strong>Fecha de Emisión:</strong> <br>
+                                <span th:text="${factura.fecha}">[Fecha]</span><br>
                                 <strong>Total:</strong> $ <span th:text="${factura.total}">[Total]</span><br>
                             </p>
                             <div class="d-flex justify-content-end">
-                                <!--
-                                <a th:href="@{/facturacion/factura/editar/{id}(id=${producto.id_producto})}"
-                                   class="btn btn-info btn-sm">Editar</a>
-                                   -->
+                                <a th:href="@{/facturacion/factura/verPDF/{id}(id=${factura.idFactura})}"
+                                    class="btn btn-info btn-sm me-2">Ver PDF</a>
+
+                                <a th:href="@{/facturacion/factura/verXML/{id}(id=${factura.idFactura})}"
+                                    class="btn btn-info btn-sm me-2">Ver XML</a>
+
                                 <a th:href="@{/facturacion/factura/{id}(id=${factura.idFactura})}"
                                     class="btn btn-danger btn-sm">Eliminar</a>
                             </div>
@@ -63,6 +71,9 @@
                     </div>
                 </div>
             </div>
+
+
+
         </div>
     </div>
 
