Modulo de Empresa
Solo muestra la vista de la empresa junto a sus vistas para crear una empresa y para editar. No esta implementado para guardar y eliminar.

--- a/src/main/resources/templates/administradores/administradores.html
+++ b/src/main/resources/templates/administradores/administradores.html
@@ -80,7 +80,7 @@
                     <a th:href="@{/clientes}" class="btn btn-lg btn-secondary w-100 py-4">Clientes</a>
                 </div>
                 <div class="col-md-6">
-                    <button class="btn btn-lg btn-secondary w-100 py-4">Empresas</button>
+                    <a th:href="@{/empresas}" class="btn btn-lg btn-secondary w-100 py-4">Empresas</a>
                 </div>
                 <div class="col-md-6">
                     <a th:href="@{/cerrar_sesion}" class="btn btn-lg btn-secondary w-100 py-4">Cerrar Sesión</a>
