--- a/src/main/resources/templates/clientes/tipos_cliente.html
+++ b/src/main/resources/templates/clientes/tipos_cliente.html
@@ -40,10 +40,10 @@
                     <p th:text="${errorMessage}"></p>
                 </div>
 
-                <form class="d-flex mb-3" role="search">
+                <!-- <form class="d-flex mb-3" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar por Nombre" aria-label="Buscar">
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
+                </form> -->
 
                 <div class="table-responsive">
                     <table class="table table-striped table-hover align-middle">
