--- a/src/main/resources/templates/personal/roles.html
+++ b/src/main/resources/templates/personal/roles.html
@@ -32,12 +32,12 @@
         </div>
 
         <div class="col">
-            <form class="d-flex mb-3" role="search">
+            <!-- <form class="d-flex mb-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar por Nombre"
                        aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
-
+ -->
 
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
